# care_eaushadhi

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  Makefile  README.md  product_knowledge_export_e1ff13b6-383a-4217-a367-f421f7bbe478.csv  product_mapping_import.py  pyproject.toml  sample.csv
.github/: ISSUE_TEMPLATE.md
.github/workflows/: trigger-care-build.yml
design/: API_Collection.json  eaushadhi-openapi.yaml
docs/: index.md  installation.md  usage.md
src/care_eaushadhi/: __init__.py  admin.py  apps.py  fuzzy_matching.py  settings.py  tasks.py  urls.py
src/care_eaushadhi/api/: viewsets.py
src/care_eaushadhi/api/services/: fetch_from_eaushadhi.py
src/care_eaushadhi/api/specs/: institute_mapping.py  institute_supplier_mapping.py  inward_record.py  product_mappings.py  (+5 more)
src/care_eaushadhi/migrations/: 0001_initial.py  0002_alter_eaushadhiinwardrecorditemdelivery_status.py  0002_eaushadhiinstitutemapping_and_more.py  0003_eaushadhiproductmapping.py  0003_eaushadhiproductmapping_mapping_type.py  0004_remove_eaushadhiproductmapping_uniq_facility_drug_id_and_more.py
src/care_eaushadhi/models/: __init__.py  care_eaushadhi_model.py  eaushadhi_api_schema.py  eaushadhi_fetch_log.py  eaushadhi_institute_mapping.py  eaushadhi_institute_supplier_mapping.py  eaushadhi_inward_record.py  eaushadhi_inward_record_delivery.py  eaushadhi_inward_record_item.py  eaushadhi_inward_record_item_delivery.py  eaushadhi_product_mapping.py
src/care_eaushadhi/security/: EAushadhiAccess.py  EAushadhiPermissions.py
tests/: __init__.py  test_care_hello.py
(+16 files in other folders)
